Fixed returnBook and added extendLoanPeriod